[fix][dingo-executor] Fix test issues