@@ -55,4 +55,10 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    jvmArgs(
+        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+        '--add-opens', 'java.base/java.time=ALL-UNNAMED',
+        '--add-opens', 'java.base/sun.util.calendar=ALL-UNNAMED'
+    )
 }
